# beatrix-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  memory.x
.cargo/: config.toml
processor/stm32wb55cm4/: device.x  lib.rs
src/: main.rs
