[package]
name = "beatrix-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
critical-section = "1.2.0"
panic-halt = "1.0.0"
panic-semihosting = "0.6.0"

[features]
rt = ["cortex-m-rt/device"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
